# kanban

./: Cargo.toml  README.md  railway.json
github/workflows/: release.yml  rust.yml
src/: cli.rs  config.rs  main.rs  tasks.rs
tests/: cli.rs
