[package]
name = "kanban"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
assert_cmd = "2.0.17"
comfy-table = "7.1.4"
exitcode = "1.1.2"
home = "0.5.11"
predicates = "3.1.3"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
shellexpand = "3.1.1"
structopt = "0.3.26"
toml = "0.9.4"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = "0.12.24"
tokio = { version = "1.48.0", features = ["full"] }



